# kernel-trainer

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
.github/prompts/: docstrings.prompt.md
.github/workflows/: release.yml
data/: 1a_3d_10000s_0.5ir_4321_2025-08-30.csv  1a_3d_200s_0.5ir_4321_2025-08-10.csv  1b_3d_10000s_0.5ir_4321_2025-08-30.csv  1b_3d_200s_0.5ir_4321_2025-08-10.csv  1c_3d_10000s_0.5ir_4321_2025-08-30.csv  1c_3d_200s_0.5ir_4321_2025-08-10.csv  2a_3d_10000s_0.5ir_4321_2025-08-30.csv  2a_3d_200s_0.5ir_4321_2025-08-10.csv  2b_3d_10000s_0.5ir_4321_2025-08-30.csv  2b_3d_200s_0.5ir_4321_2025-08-10.csv  2c_3d_10000s_0.5ir_4321_2025-08-30.csv  2c_3d_1000s_0.5ir_4321_2026-01-19.csv  2c_3d_2000s_0.5ir_4321_2026-01-20.csv  2c_3d_200s_0.5ir_4321_2025-08-10.csv  2c_3d_4000s_0.5ir_4321_2026-01-14.csv  2c_3d_500s_0.5ir_4321_2026-01-21.csv  3a_3d_10000s_0.5ir_4321_2025-08-30.csv  3a_3d_200s_0.5ir_4321_2025-08-10.csv  3b_3d_10000s_0.5ir_4321_2025-08-30.csv  3b_3d_200s_0.5ir_4321_2025-08-10.csv  3c_3d_10000s_0.5ir_4321_2025-08-30.csv  3c_3d_200s_0.5ir_4321_2025-08-10.csv
notebooks/: 1. Data plots.ipynb  1.1 Example.ipynb  2. Plots.ipynb
scripts/: launch-sky-template.yaml
src/kernel_trainer/: __init__.py  cli.py  config.py  dataset.py  kernels.py  main.py  metrics.py  params.py  preprocess.py  utils.py
src/kernel_trainer/kernels/: __init__.py  classical.py  quantum.py
